feat. editorial PC 화면

--- a/index.html
+++ b/index.html
@@ -666,6 +666,416 @@
             </div>
           </div>
         </section>
+        <section class="ranking">
+          <div class="ranking__container">
+            <div class="ranking__titile-container">
+              <h1 class="ranking__title">랭킹</h1>
+              <a href="#" class="ranking__more">View All</a>
+            </div>
+            <ul class="ranking__list">
+              <!-- ranking item 1 -->
+              <li class="ranking__item-wrapper">
+                <div class="ranking__item">
+                  <div class="ranking-item__num">1</div>
+                  <div class="ranking-item__img-wrapper">
+                    <a href="#"
+                      ><img
+                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        alt=""
+                        class="ranking-item__img"
+                    /></a>
+                  </div>
+                  <div class="ranking-item__info">
+                    <h3 class="ranking-item__name">
+                      Detachable Sleeve Zip-Up Jumper - Ivory
+                    </h3>
+                    <h4 class="ranking-item__brand">Amomento</h4>
+                  </div>
+                </div>
+              </li>
+              <!-- ranking item 2 -->
+              <li class="ranking__item-wrapper">
+                <div class="ranking__item">
+                  <div class="ranking-item__num">2</div>
+                  <div class="ranking-item__img-wrapper">
+                    <a href="#"
+                      ><img
+                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        alt=""
+                        class="ranking-item__img"
+                    /></a>
+                  </div>
+                  <div class="ranking-item__info">
+                    <h3 class="ranking-item__name">
+                      Detachable Sleeve Zip-Up Jumper - Ivory
+                    </h3>
+                    <h4 class="ranking-item__brand">Amomento</h4>
+                  </div>
+                </div>
+              </li>
+              <!-- ranking item 3 -->
+              <li class="ranking__item-wrapper">
+                <div class="ranking__item">
+                  <div class="ranking-item__num">3</div>
+                  <div class="ranking-item__img-wrapper">
+                    <a href="#"
+                      ><img
+                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        alt=""
+                        class="ranking-item__img"
+                    /></a>
+                  </div>
+                  <div class="ranking-item__info">
+                    <h3 class="ranking-item__name">
+                      Detachable Sleeve Zip-Up Jumper - Ivory
+                    </h3>
+                    <h4 class="ranking-item__brand">Amomento</h4>
+                  </div>
+                </div>
+              </li>
+              <!-- ranking item 4 -->
+              <li class="ranking__item-wrapper">
+                <div class="ranking__item">
+                  <div class="ranking-item__num">4</div>
+                  <div class="ranking-item__img-wrapper">
+                    <a href="#"
+                      ><img
+                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        alt=""
+                        class="ranking-item__img"
+                    /></a>
+                  </div>
+                  <div class="ranking-item__info">
+                    <h3 class="ranking-item__name">
+                      Detachable Sleeve Zip-Up Jumper - Ivory
+                    </h3>
+                    <h4 class="ranking-item__brand">Amomento</h4>
+                  </div>
+                </div>
+              </li>
+              <!-- ranking item 5 -->
+              <li class="ranking__item-wrapper">
+                <div class="ranking__item">
+                  <div class="ranking-item__num">5</div>
+                  <div class="ranking-item__img-wrapper">
+                    <a href="#"
+                      ><img
+                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        alt=""
+                        class="ranking-item__img"
+                    /></a>
+                  </div>
+                  <div class="ranking-item__info">
+                    <h3 class="ranking-item__name">
+                      Detachable Sleeve Zip-Up Jumper - Ivory
+                    </h3>
+                    <h4 class="ranking-item__brand">Amomento</h4>
+                  </div>
+                </div>
+              </li>
+              <!-- ranking item 6 -->
+              <li class="ranking__item-wrapper">
+                <div class="ranking__item">
+                  <div class="ranking-item__num">6</div>
+                  <div class="ranking-item__img-wrapper">
+                    <a href="#"
+                      ><img
+                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        alt=""
+                        class="ranking-item__img"
+                    /></a>
+                  </div>
+                  <div class="ranking-item__info">
+                    <h3 class="ranking-item__name">
+                      Detachable Sleeve Zip-Up Jumper - Ivory
+                    </h3>
+                    <h4 class="ranking-item__brand">Amomento</h4>
+                  </div>
+                </div>
+              </li>
+              <!-- ranking item 7 -->
+              <li class="ranking__item-wrapper">
+                <div class="ranking__item">
+                  <div class="ranking-item__num">7</div>
+                  <div class="ranking-item__img-wrapper">
+                    <a href="#"
+                      ><img
+                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        alt=""
+                        class="ranking-item__img"
+                    /></a>
+                  </div>
+                  <div class="ranking-item__info">
+                    <h3 class="ranking-item__name">
+                      Detachable Sleeve Zip-Up Jumper - Ivory
+                    </h3>
+                    <h4 class="ranking-item__brand">Amomento</h4>
+                  </div>
+                </div>
+              </li>
+              <!-- ranking item 8 -->
+              <li class="ranking__item-wrapper">
+                <div class="ranking__item">
+                  <div class="ranking-item__num">8</div>
+                  <div class="ranking-item__img-wrapper">
+                    <a href="#"
+                      ><img
+                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        alt=""
+                        class="ranking-item__img"
+                    /></a>
+                  </div>
+                  <div class="ranking-item__info">
+                    <h3 class="ranking-item__name">
+                      Detachable Sleeve Zip-Up Jumper - Ivory
+                    </h3>
+                    <h4 class="ranking-item__brand">Amomento</h4>
+                  </div>
+                </div>
+              </li>
+              <!-- ranking item 9 -->
+              <li class="ranking__item-wrapper">
+                <div class="ranking__item">
+                  <div class="ranking-item__num">9</div>
+                  <div class="ranking-item__img-wrapper">
+                    <a href="#"
+                      ><img
+                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        alt=""
+                        class="ranking-item__img"
+                    /></a>
+                  </div>
+                  <div class="ranking-item__info">
+                    <h3 class="ranking-item__name">
+                      Detachable Sleeve Zip-Up Jumper - Ivory
+                    </h3>
+                    <h4 class="ranking-item__brand">Amomento</h4>
+                  </div>
+                </div>
+              </li>
+              <!-- ranking item 10 -->
+              <li class="ranking__item-wrapper">
+                <div class="ranking__item">
+                  <div class="ranking-item__num">10</div>
+                  <div class="ranking-item__img-wrapper">
+                    <a href="#"
+                      ><img
+                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        alt=""
+                        class="ranking-item__img"
+                    /></a>
+                  </div>
+                  <div class="ranking-item__info">
+                    <h3 class="ranking-item__name">
+                      Detachable Sleeve Zip-Up Jumper - Ivory
+                    </h3>
+                    <h4 class="ranking-item__brand">Amomento</h4>
+                  </div>
+                </div>
+              </li>
+              <!-- ranking item 11 -->
+              <li class="ranking__item-wrapper">
+                <div class="ranking__item">
+                  <div class="ranking-item__num">11</div>
+                  <div class="ranking-item__img-wrapper">
+                    <a href="#"
+                      ><img
+                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        alt=""
+                        class="ranking-item__img"
+                    /></a>
+                  </div>
+                  <div class="ranking-item__info">
+                    <h3 class="ranking-item__name">
+                      Detachable Sleeve Zip-Up Jumper - Ivory
+                    </h3>
+                    <h4 class="ranking-item__brand">Amomento</h4>
+                  </div>
+                </div>
+              </li>
+              <!-- ranking item 12 -->
+              <li class="ranking__item-wrapper">
+                <div class="ranking__item">
+                  <div class="ranking-item__num">12</div>
+                  <div class="ranking-item__img-wrapper">
+                    <a href="#"
+                      ><img
+                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        alt=""
+                        class="ranking-item__img"
+                    /></a>
+                  </div>
+                  <div class="ranking-item__info">
+                    <h3 class="ranking-item__name">
+                      Detachable Sleeve Zip-Up Jumper - Ivory
+                    </h3>
+                    <h4 class="ranking-item__brand">Amomento</h4>
+                  </div>
+                </div>
+              </li>
+              <!-- ranking item 13 -->
+              <li class="ranking__item-wrapper">
+                <div class="ranking__item">
+                  <div class="ranking-item__num">13</div>
+                  <div class="ranking-item__img-wrapper">
+                    <a href="#"
+                      ><img
+                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        alt=""
+                        class="ranking-item__img"
+                    /></a>
+                  </div>
+                  <div class="ranking-item__info">
+                    <h3 class="ranking-item__name">
+                      Detachable Sleeve Zip-Up Jumper - Ivory
+                    </h3>
+                    <h4 class="ranking-item__brand">Amomento</h4>
+                  </div>
+                </div>
+              </li>
+              <!-- ranking item 14 -->
+              <li class="ranking__item-wrapper">
+                <div class="ranking__item">
+                  <div class="ranking-item__num">14</div>
+                  <div class="ranking-item__img-wrapper">
+                    <a href="#"
+                      ><img
+                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        alt=""
+                        class="ranking-item__img"
+                    /></a>
+                  </div>
+                  <div class="ranking-item__info">
+                    <h3 class="ranking-item__name">
+                      Detachable Sleeve Zip-Up Jumper - Ivory
+                    </h3>
+                    <h4 class="ranking-item__brand">Amomento</h4>
+                  </div>
+                </div>
+              </li>
+              <!-- ranking item 15 -->
+              <li class="ranking__item-wrapper">
+                <div class="ranking__item">
+                  <div class="ranking-item__num">15</div>
+                  <div class="ranking-item__img-wrapper">
+                    <a href="#"
+                      ><img
+                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        alt=""
+                        class="ranking-item__img"
+                    /></a>
+                  </div>
+                  <div class="ranking-item__info">
+                    <h3 class="ranking-item__name">
+                      Detachable Sleeve Zip-Up Jumper - Ivory
+                    </h3>
+                    <h4 class="ranking-item__brand">Amomento</h4>
+                  </div>
+                </div>
+              </li>
+              <!-- ranking item 16 -->
+              <li class="ranking__item-wrapper">
+                <div class="ranking__item">
+                  <div class="ranking-item__num">16</div>
+                  <div class="ranking-item__img-wrapper">
+                    <a href="#"
+                      ><img
+                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        alt=""
+                        class="ranking-item__img"
+                    /></a>
+                  </div>
+                  <div class="ranking-item__info">
+                    <h3 class="ranking-item__name">
+                      Detachable Sleeve Zip-Up Jumper - Ivory
+                    </h3>
+                    <h4 class="ranking-item__brand">Amomento</h4>
+                  </div>
+                </div>
+              </li>
+              <!-- ranking item 17 -->
+              <li class="ranking__item-wrapper">
+                <div class="ranking__item">
+                  <div class="ranking-item__num">7</div>
+                  <div class="ranking-item__img-wrapper">
+                    <a href="#"
+                      ><img
+                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        alt=""
+                        class="ranking-item__img"
+                    /></a>
+                  </div>
+                  <div class="ranking-item__info">
+                    <h3 class="ranking-item__name">
+                      Detachable Sleeve Zip-Up Jumper - Ivory
+                    </h3>
+                    <h4 class="ranking-item__brand">Amomento</h4>
+                  </div>
+                </div>
+              </li>
+              <!-- ranking item 18 -->
+              <li class="ranking__item-wrapper">
+                <div class="ranking__item">
+                  <div class="ranking-item__num">18</div>
+                  <div class="ranking-item__img-wrapper">
+                    <a href="#"
+                      ><img
+                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        alt=""
+                        class="ranking-item__img"
+                    /></a>
+                  </div>
+                  <div class="ranking-item__info">
+                    <h3 class="ranking-item__name">
+                      Detachable Sleeve Zip-Up Jumper - Ivory
+                    </h3>
+                    <h4 class="ranking-item__brand">Amomento</h4>
+                  </div>
+                </div>
+              </li>
+              <!-- ranking item 19 -->
+              <li class="ranking__item-wrapper">
+                <div class="ranking__item">
+                  <div class="ranking-item__num">19</div>
+                  <div class="ranking-item__img-wrapper">
+                    <a href="#"
+                      ><img
+                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        alt=""
+                        class="ranking-item__img"
+                    /></a>
+                  </div>
+                  <div class="ranking-item__info">
+                    <h3 class="ranking-item__name">
+                      Detachable Sleeve Zip-Up Jumper - Ivory
+                    </h3>
+                    <h4 class="ranking-item__brand">Amomento</h4>
+                  </div>
+                </div>
+              </li>
+              <!-- ranking item 20 -->
+              <li class="ranking__item-wrapper">
+                <div class="ranking__item">
+                  <div class="ranking-item__num">20</div>
+                  <div class="ranking-item__img-wrapper">
+                    <a href="#"
+                      ><img
+                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        alt=""
+                        class="ranking-item__img"
+                    /></a>
+                  </div>
+                  <div class="ranking-item__info">
+                    <h3 class="ranking-item__name">
+                      Detachable Sleeve Zip-Up Jumper - Ivory
+                    </h3>
+                    <h4 class="ranking-item__brand">Amomento</h4>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </section>
       </main>
     </div>
   </body>
