feat. 반응형 max-width : 1280px 화면

--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
                 <div class="large-banner__img">
                   <a href="#" class="large-banner__link">
                     <img
-                      src="./img/first-section/Rectangle-8-1-1-1.png"
+                      src="./img/first-section/Rectangle-2-4-10.png"
                       alt=""
                       class="product-1-img"
                   /></a>
                 </div>
                 <div class="large-banner__info">
-                  <h4 class="large-banner__category">New In</h4>
+                  <h4 class="large-banner__category">Promotion</h4>
                   <h3 class="large-banner__title">
-                    문선, 신규 입점 기념 10% 할인
+                    New Balance 신규 입점 기념 10% 할인
                   </h3>
                   <a href="#" class="large-banner__more">Read More</a>
                 </div>
@@ -122,7 +122,7 @@
                 <div class="large-banner__img">
                   <a href="#" class="large-banner__link">
                     <img
-                      src="./img/first-section/Rectangle-8-1-1-1.png"
+                      src="./img/first-section/Rectangle-8-1-1-2.png"
                       alt=""
                       class="product-1-img"
                   /></a>
@@ -130,7 +130,7 @@
                 <div class="large-banner__info">
                   <h4 class="large-banner__category">New In</h4>
                   <h3 class="large-banner__title">
-                    문선, 신규 입점 기념 10% 할인
+                    카키스 22 봄, 여름 컬랙션 신규 발매
                   </h3>
                   <a href="#" class="large-banner__more">Read More</a>
                 </div>
@@ -139,7 +139,7 @@
                 <div class="large-banner__img">
                   <a href="#" class="large-banner__link">
                     <img
-                      src="./img/first-section/Rectangle-8-1-1-1.png"
+                      src="./img/first-section/Rectangle-10-1-4.png"
                       alt=""
                       class="product-1-img"
                   /></a>
@@ -156,7 +156,7 @@
                 <div class="large-banner__img">
                   <a href="#" class="large-banner__link">
                     <img
-                      src="./img/first-section/Rectangle-8-1-1-1.png"
+                      src="./img/first-section/Rectangle-69-2.png"
                       alt=""
                       class="product-1-img"
                   /></a>
@@ -164,7 +164,7 @@
                 <div class="large-banner__info">
                   <h4 class="large-banner__category">New In</h4>
                   <h3 class="large-banner__title">
-                    문선, 신규 입점 기념 10% 할인
+                    귀엽고 세련된 미니백 신상품 프로모션
                   </h3>
                   <a href="#" class="large-banner__more">Read More</a>
                 </div>
@@ -349,7 +349,10 @@
         </section>
         <section class="curation">
           <div class="curation__container">
-            <h1 class="curation__title">큐레이션</h1>
+            <div class="curation__title-container">
+              <h1 class="curation__title">큐레이션</h1>
+              <a href="#" class="curation__more">View All</a>
+            </div>
             <div class="curation__item-container">
               <div class="curation__item">
                 <div class="curation-item__img">
@@ -668,7 +671,7 @@
         </section>
         <section class="ranking">
           <div class="ranking__container">
-            <div class="ranking__titile-container">
+            <div class="ranking__title-container">
               <h1 class="ranking__title">랭킹</h1>
               <a href="#" class="ranking__more">View All</a>
             </div>
@@ -700,7 +703,7 @@
                   <div class="ranking-item__img-wrapper">
                     <a href="#"
                       ><img
-                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        src="./img/ranking/223359092bb9d113c4f2ee5b07e60d22.jpg"
                         alt=""
                         class="ranking-item__img"
                     /></a>
@@ -720,7 +723,7 @@
                   <div class="ranking-item__img-wrapper">
                     <a href="#"
                       ><img
-                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        src="./img/ranking/25d910c04a6a2681e0c5bec6ab1e27f9.jpg"
                         alt=""
                         class="ranking-item__img"
                     /></a>
@@ -740,7 +743,7 @@
                   <div class="ranking-item__img-wrapper">
                     <a href="#"
                       ><img
-                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        src="./img/ranking/2d986cea976697abdc523fc974b2d7a9.jpg"
                         alt=""
                         class="ranking-item__img"
                     /></a>
@@ -760,7 +763,7 @@
                   <div class="ranking-item__img-wrapper">
                     <a href="#"
                       ><img
-                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        src="./img/ranking/70997c8ae08b108b8246b6d781d82402.jpg"
                         alt=""
                         class="ranking-item__img"
                     /></a>
@@ -780,7 +783,7 @@
                   <div class="ranking-item__img-wrapper">
                     <a href="#"
                       ><img
-                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        src="./img/ranking/7345ab3977cdc66f59d98ed0c8ce1265.jpg"
                         alt=""
                         class="ranking-item__img"
                     /></a>
@@ -800,16 +803,16 @@
                   <div class="ranking-item__img-wrapper">
                     <a href="#"
                       ><img
-                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        src="./img/ranking/78e00e806d315f7337109095b469e5a9.jpg"
                         alt=""
                         class="ranking-item__img"
                     /></a>
                   </div>
                   <div class="ranking-item__info">
                     <h3 class="ranking-item__name">
-                      Detachable Sleeve Zip-Up Jumper - Ivory
+                      22SS Windblock Jacket - Ivory
                     </h3>
-                    <h4 class="ranking-item__brand">Amomento</h4>
+                    <h4 class="ranking-item__brand">San San Gear</h4>
                   </div>
                 </div>
               </li>
@@ -820,7 +823,7 @@
                   <div class="ranking-item__img-wrapper">
                     <a href="#"
                       ><img
-                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        src="./img/ranking/7d15ef65283a928449107c45f3119a69.jpg"
                         alt=""
                         class="ranking-item__img"
                     /></a>
@@ -840,7 +843,7 @@
                   <div class="ranking-item__img-wrapper">
                     <a href="#"
                       ><img
-                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        src="./img/ranking/87d19bfd215512cfaa8b2aa6e7e23157.jpg"
                         alt=""
                         class="ranking-item__img"
                     /></a>
@@ -860,7 +863,7 @@
                   <div class="ranking-item__img-wrapper">
                     <a href="#"
                       ><img
-                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        src="./img/ranking/988b5ce9b5ac04a0908c51259b7f3f9d.jpg"
                         alt=""
                         class="ranking-item__img"
                     /></a>
@@ -880,7 +883,7 @@
                   <div class="ranking-item__img-wrapper">
                     <a href="#"
                       ><img
-                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        src="./img/ranking/a64311530b272163633f79fa595cc69d.jpg"
                         alt=""
                         class="ranking-item__img"
                     /></a>
@@ -900,7 +903,7 @@
                   <div class="ranking-item__img-wrapper">
                     <a href="#"
                       ><img
-                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        src="./img/ranking/af42b0f8a94a31d525186a8cb3afa56d.jpg"
                         alt=""
                         class="ranking-item__img"
                     /></a>
@@ -920,7 +923,7 @@
                   <div class="ranking-item__img-wrapper">
                     <a href="#"
                       ><img
-                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        src="./img/ranking/b2f3a3450f142263f7fd3a5412144ad9.jpg"
                         alt=""
                         class="ranking-item__img"
                     /></a>
@@ -940,7 +943,7 @@
                   <div class="ranking-item__img-wrapper">
                     <a href="#"
                       ><img
-                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        src="./img/ranking/b8660048012ad6228351579edb215ef5.jpg"
                         alt=""
                         class="ranking-item__img"
                     /></a>
@@ -960,7 +963,7 @@
                   <div class="ranking-item__img-wrapper">
                     <a href="#"
                       ><img
-                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        src="./img/ranking/c1a296ed9dc97f20cd19a8d3944bbcf6.jpg"
                         alt=""
                         class="ranking-item__img"
                     /></a>
@@ -980,7 +983,7 @@
                   <div class="ranking-item__img-wrapper">
                     <a href="#"
                       ><img
-                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        src="./img/ranking/c4b503cae3bbafd06dd4e14cc977711c.jpg"
                         alt=""
                         class="ranking-item__img"
                     /></a>
@@ -996,11 +999,11 @@
               <!-- ranking item 17 -->
               <li class="ranking__item-wrapper">
                 <div class="ranking__item">
-                  <div class="ranking-item__num">7</div>
+                  <div class="ranking-item__num">17</div>
                   <div class="ranking-item__img-wrapper">
                     <a href="#"
                       ><img
-                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        src="./img/ranking/ca8e7b6727038daba6064e082f68a7c3.jpg"
                         alt=""
                         class="ranking-item__img"
                     /></a>
@@ -1020,7 +1023,7 @@
                   <div class="ranking-item__img-wrapper">
                     <a href="#"
                       ><img
-                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        src="./img/ranking/cc44d22f635b53fc9bff97eddb7a2942.jpg"
                         alt=""
                         class="ranking-item__img"
                     /></a>
@@ -1040,7 +1043,7 @@
                   <div class="ranking-item__img-wrapper">
                     <a href="#"
                       ><img
-                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        src="./img/ranking/fbe070e0e3171a743303706394242dc8.jpg"
                         alt=""
                         class="ranking-item__img"
                     /></a>
@@ -1060,7 +1063,7 @@
                   <div class="ranking-item__img-wrapper">
                     <a href="#"
                       ><img
-                        src="./img/ranking/08bf51e9481d743cad2cec6314052d4d.jpg"
+                        src="./img/ranking/fc7adeacb5f527474ece19e93f3eea5a.jpg"
                         alt=""
                         class="ranking-item__img"
                     /></a>
