reafctor. code style

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
-    <title>Document</title>
+    <title>HEIGNTS, 하이츠 스토어</title>
   </head>
   <body>
     <div class="wrap">
@@ -29,7 +29,6 @@
             <div class="main-nav__nav-item">
               <a href="#" class="main-nav__nav-link">에디토리얼</a>
             </div>
-
             <div class="main-nav__nav-item">
               <a href="#" class="main-nav__nav-link">발매일정</a>
             </div>
@@ -43,8 +42,8 @@
                 <input
                   type="text"
                   name="search-input"
-                  placeholder="상품, 브랜드, 카테고리 검색"
                   class="search-form__search-input"
+                  placeholder="상품, 브랜드, 카테고리 검색"
                   size="15"
                 />
                 <button type="submit" class="search-form__search-btn"></button>
@@ -60,7 +59,7 @@
             <div class="sub-nav__nav-item"><span>고객센터</span></div>
             <div class="sub-nav__nav-item">
               <div class="sub-nav__basket">
-                <a class="sub-nav__basket-link" href="#">
+                <a href="#" class="sub-nav__basket-link">
                   <img
                     src="./img/header/icon_header_basket_black.png"
                     alt="장바구니"
@@ -71,11 +70,7 @@
               </div>
             </div>
             <div class="sub-nav__nav-item">
-              <div class="sub-nav__long">KOR</div>
-              <!-- <ul>
-                <li>KOR</li>
-                <li>ENG</li>
-              </ul> -->
+              <div class="sub-nav__lang">KOR</div>
             </div>
           </div>
         </div>
@@ -275,7 +270,7 @@
           <div class="spotlight__contaner">
             <div class="spotlight__item">
               <div class="spotlight-item__img">
-                <a href="spotlight-item__img-link">
+                <a href="#">
                   <img src="./img/spotlight/Rectangle-17-1-1-1.png" alt="" />
                 </a>
               </div>
@@ -293,7 +288,7 @@
             </div>
             <div class="spotlight__item">
               <div class="spotlight-item__img">
-                <a href="spotlight-item__img-link">
+                <a href="#">
                   <img src="./img/spotlight/Rectangle-18-2-4.png" alt="" />
                 </a>
               </div>
@@ -301,17 +296,17 @@
                 <div class="spotlight-item__thumbnail">
                   <img src="./img/spotlight/1.jpg" alt="" />
                 </div>
-                <h4 class="spotlight-item__brand">WORST SKATESHOP</h4>
+                <h4 class="spotlight-item__brand">Computer Format</h4>
                 <a href="#" class="spotlight-item__name-link"
                   ><h3 class="spotlight-item__name">
-                    SK8 Star S/S Tee - Light Blue
+                    CF Stud Hoodie - Black
                   </h3></a
                 >
               </div>
             </div>
             <div class="spotlight__item">
               <div class="spotlight-item__img">
-                <a href="spotlight-item__img-link">
+                <a href="#">
                   <img src="./img/spotlight/Rectangle-19-5-1.png" alt="" />
                 </a>
               </div>
@@ -329,7 +324,7 @@
             </div>
             <div class="spotlight__item">
               <div class="spotlight-item__img">
-                <a href="spotlight-item__img-link">
+                <a href="#">
                   <img src="./img/spotlight/Rectangle-20-2-3.png" alt="" />
                 </a>
               </div>
@@ -504,10 +499,7 @@
               <div class="curation__item">
                 <div class="curation-item__img">
                   <a href="#" class="curation-item__img-link"
-                    ><img
-                      src="./img/curation/Rectangle-22-1.png"
-                      alt=""
-                      class=""
+                    ><img src="./img/curation/Rectangle-22-1.png" alt=""
                   /></a>
                 </div>
                 <div class="curation-item__info">
