refactor. spotlight item class name

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         <section class="spotlight">
           <h1 class="spotlight__title">스포트라이트</h1>
           <div class="spotlight__container">
-            <div class="spotlight__item">
+            <div class="spotlight-item">
               <div class="spotlight-item__img">
                 <a href="#">
                   <img src="./img/spotlight/Rectangle-17-1-1-1.png" alt="" />
@@ -279,7 +279,7 @@
                 >
               </div>
             </div>
-            <div class="spotlight__item">
+            <div class="spotlight-item">
               <div class="spotlight-item__img">
                 <a href="#">
                   <img src="./img/spotlight/Rectangle-18-2-4.png" alt="" />
@@ -295,7 +295,7 @@
                 </a>
               </div>
             </div>
-            <div class="spotlight__item">
+            <div class="spotlight-item">
               <div class="spotlight-item__img">
                 <a href="#">
                   <img src="./img/spotlight/Rectangle-19-5-1.png" alt="" />
@@ -313,7 +313,7 @@
                 >
               </div>
             </div>
-            <div class="spotlight__item">
+            <div class="spotlight-item">
               <div class="spotlight-item__img">
                 <a href="#">
                   <img src="./img/spotlight/Rectangle-20-2-3.png" alt="" />
